Added more to individual character page

--- a/character.html
+++ b/character.html
@@ -31,9 +31,25 @@
         <hr class="sideDivider">
         </div>
     </div>
-    
+
     <!-- Character Section -->
     <div class="wikiSection">
+
+        <!-- Character Menu -->
+    <div class="characterMenu">
+        <div class="charMen">
+            <p>profile</p>
+        </div>
+        <div class="charMen">
+            <p>lore</p>
+        </div>
+        <div class="charMen">
+            <p>relationships</p>
+        </div>
+        <div class="charMen">
+            <p>gallery</p>
+        </div>
+    </div>
 
         <!-- Character Title & Divider -->
         <p class="wikiTitle"></p>
@@ -44,6 +60,11 @@
         </div>
     </div>
 </div>
+<!-- Custom cursor -->
+<div class="custom-cursor">
+    <img src="/resources/cursor.png" id="cursor">
+</div>
+<script src="cursor.js"></script>
 </body>
 <script src="character.js"></script>
 </html>
