--- a/characters.html
+++ b/characters.html
@@ -35,6 +35,8 @@
     <!-- Character Section -->
     <div class="wikiSection">
 
+        <div>sorting nav? by unit type? dropdown menu for galaxy sort?... toggle gender menu? oof</div>
+
         <!-- Character Title & Divider -->
         <p class="wikiTitle">■ Characters</p>
         <hr class="wikiDivider"/>
@@ -44,6 +46,11 @@
         </div>
     </div>
 </div>
+<!-- Custom cursor -->
+<div class="custom-cursor">
+    <img src="/resources/cursor.png" id="cursor">
+</div>
+<script src="cursor.js"></script>
 </body>
 <script src="characters.js"></script>
 </html>
