--- a/galaxies.html
+++ b/galaxies.html
@@ -44,6 +44,11 @@
         </div>
     </div>
 </div>
+<!-- Custom cursor -->
+<div class="custom-cursor">
+    <img src="/resources/cursor.png" id="cursor">
+</div>
+<script src="cursor.js"></script>
 </body>
 <script src="galaxies.js"></script>
 </html>
