--- a/index.html
+++ b/index.html
@@ -60,13 +60,39 @@
         <a href="galaxies.html">
             <div class="wikiNav">
                 <div class="imageContainer">
-                <img src="/resources/characterImg.png" id="characters"/>
+                <img src="/resources/galaxyImg.jpg" id="galaxies"/>
                 </div>
                 <p class="wikiText">Galaxies →</p>
+            </div>
+        </a>
+
+        <a href="">
+            <div class="wikiNav">
+                <div class="imageContainer">
+                <img src="/resources/EquipmentImg.jpg" id="equipment"/>
+                </div>
+                <p class="wikiText">Equipment →</p>
+            </div>
+        </a>
+    </div>
+
+    <!-- Wiki Nav -->
+    <div class="wikiNavs">
+        <a href="">
+            <div class="wikiNav">
+                <div class="imageContainer">
+                <img src="/resources/LevelImg.jpg" id="level"/>
+                </div>
+                <p class="wikiText">Level guide →</p>
             </div>
         </a>
     </div>
     </div>
 </div>
+<!-- Custom cursor -->
+<div class="custom-cursor">
+    <img src="/resources/cursor.png" id="cursor">
+</div>
+<script src="cursor.js"></script>
 </body>
 </html>
