--- a/login.html
+++ b/login.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: #404040;">
+
+    <!-- Top Nav -->
+    <div class="topNavBar">
+        <img src="/resources/banner.jpg" style="width: 200px; border-right: solid 2px #7a7a7a; filter: opacity(60%);">
+        <a href="login.html"><img src="/resources/LoginIcon.png" style="width: 36px; top: 19px; right: 8px; position: relative; float: right;">
+        <p class="login">Login</p></a>
+    </div>
+    <p class="title">Galaxy Defender</p>
+
+    <!-- Side Nav & Wiki Section -->
+     <div class="sideWiki">
+
+    <!-- Side Nav -->
+    <div class="sideNavBar">
+        <div class="sideIcons">
+        <a href=""><div><img src="/resources/HomeIcon.png" style="width: 35px;"><span class="navText">Home</span></div></a>
+        <hr class="sideDivider">
+        <a href="characters.html"><div><img src="/resources/CharacterIcon.png" style="width: 35px;"><span class="navText">Characters</span></div></a>
+        <hr class="sideDivider">
+        <a href="galaxies.html"><div><img src="/resources/GalaxiesIcon.png" style="width: 35px;"><span class="navText">Galaxies</span></div></a>
+        <hr class="sideDivider">
+        </div>
+    </div>
     
+    <!-- Wiki Section -->
+    <div class="wikiSection">
+
+        <div class="introduction">
+            <p>
+                Yet to register? Do so <a href="">here</a>.
+            </p>
+        </div>
+
+        <!-- Wiki Title & Divider -->
+        <p class="wikiTitle">■ Login</p>
+        <hr class="wikiDivider"/>
+        
+        <!-- Wiki Nav -->
+        <div class="loginBox">
+
+        </div>
+    </div>
+</div>
+<!-- Custom cursor -->
+<div class="custom-cursor">
+    <img src="/resources/cursor.png" id="cursor">
+</div>
+<script src="cursor.js"></script>
 </body>
 </html>
