--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Top Nav -->
     <div class="topNavBar">
         <img src="/resources/banner.jpg" style="width: 200px; border-right: solid 2px #7a7a7a; filter: opacity(60%);">
-        <a href=""><img src="/resources/LoginIcon.png" style="width: 36px; top: 19px; right: 8px; position: relative; float: right;">
+        <a href="login.html"><img src="/resources/LoginIcon.png" style="width: 36px; top: 19px; right: 8px; position: relative; float: right;">
         <p class="login">Login</p></a>
     </div>
     <p class="title">Galaxy Defender</p>
