Made it visible in the UI that you're logged in

--- a/characters.html
+++ b/characters.html
@@ -12,8 +12,10 @@
     <!-- Top Nav -->
     <div class="topNavBar">
         <img src="/resources/banner.jpg" style="width: 200px; border-right: solid 2px #7a7a7a; filter: opacity(60%);">
-        <a href=""><img src="/resources/LoginIcon.png" style="width: 36px; top: 19px; right: 8px; position: relative; float: right;">
-        <p class="login">Login</p></a>
+        <a href="login.html" id="loginLink">
+            <img src="/resources/LoginIcon.png" class="loginImg" style="width: 36px; top: 19px; right: 8px; position: relative; float: right;">
+        <p class="login">Login</p>
+    </a>
     </div>
     <p class="title">Galaxy Defender</p>
 
@@ -51,6 +53,7 @@
     <img src="/resources/cursor.png" id="cursor">
 </div>
 <script src="cursor.js"></script>
-</body>
+<script src="auth.js"></script>
 <script src="characters.js"></script>
+</body>
 </html>
