Added more pages to character

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <!-- Side Nav -->
     <div class="sideNavBar">
         <div class="sideIcons">
-        <a href=""><div><img src="/resources/HomeIcon.png" style="width: 35px;"><span class="navText">Home</span></div></a>
+        <a href="index.html" style="text-decoration: none;"><div><img src="/resources/HomeIcon.png" style="width: 35px;"><span class="navText">Home</span></div></a>
         <hr class="sideDivider">
-        <a href="characters.html"><div><img src="/resources/CharacterIcon.png" style="width: 35px;"><span class="navText">Characters</span></div></a>
+        <a href="characters.html" style="text-decoration: none;"><div><img src="/resources/CharacterIcon.png" style="width: 35px;"><span class="navText">Characters</span></div></a>
         <hr class="sideDivider">
-        <a href="galaxies.html"><div><img src="/resources/GalaxiesIcon.png" style="width: 35px;"><span class="navText">Galaxies</span></div></a>
+        <a href="galaxies.html" style="text-decoration: none;"><div><img src="/resources/GalaxiesIcon.png" style="width: 35px;"><span class="navText">Galaxies</span></div></a>
         <hr class="sideDivider">
         </div>
     </div>
