Updated to latest version

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Top Nav -->
     <div class="topNavBar">
         <img src="/resources/banner.jpg" style="width: 200px; border-right: solid 2px #7a7a7a; filter: opacity(60%);">
+        <img src="CharacterIcon.png" class="userImg">
         <a href="login.html" id="loginLink">
             <img src="/resources/LoginIcon.png" class="loginImg" style="width: 36px; top: 19px; right: 8px; position: relative; float: right;">
         <p class="login">Login</p>
